    plymouth's unit got adjusted. (LP: #1392970, Debian #755194)
  * Mark systemd{,-sysv} as M-A: foreign (thanks lintian).
  * Quiesce maintainer-script-calls-systemctl lintian warning.
  * Quiesce possibly-insecure-handling-of-tmp-files lintian warning, it's
    wrong there (we are handling tmpfiles.d/ files which are not in a temp
    dir).

 -- Martin Pitt <mpitt@debian.org>  Wed, 17 Dec 2014 09:22:17 +0100

systemd (218-2) experimental; urgency=medium

  * boot-and-services AppArmor autopkgtest: Stop checking the dmesg log; it is
    racy as sometimes message bursts are suppressed.
  * Fix crash in timedatectl with Etc/UTC.
  * Prefer-etc-X11-default-display-manager-if-present.patch: Drop wrong
    copy&paste'd comment, fix log strings. Thanks Adam D. Barratt.
  * boot-and-services: Robustify Nspawn tests, and show systemd-nspawn output
    on failure.
  * Disable tests which fail on buildds, presumably due to too old kernels,
    misconfigured /etc/hosts, and similar problems. Make failures of the test
    suite fatal now.

 -- Martin Pitt <mpitt@debian.org>  Tue, 16 Dec 2014 08:24:38 +0100

systemd (218-1) experimental; urgency=medium

  * New upstream release. Drop all cherry-picked patches and port the Debian
    specific ones.
    - Create /etc/machine-id on boot if missing. (LP: #1387090)
  * Add new libmount-dev build dependency.
  * Configure with --enable-split-usr.
  * Merge some permanent Ubuntu changes, using dpkg-vendor:
    - Don't symlink udev doc directories.
    - Add epoch to gudev packages; Ubuntu packaged the standalone gudev before
      it got merged into udev.
    - Add Apport hooks for udev and systemd.
  * udev-fallback-graphics upstart job: Guard the modprobe with || true to
    avoid a failure when vesafb is compiled in. (LP: #1367241)

 -- Martin Pitt <mpitt@debian.org>  Sun, 14 Dec 2014 13:58:39 +0100

systemd (217-4) experimental; urgency=medium

  [ Martin Pitt ]